# ip-msg

./: .gitignore  README.md  TODO.md  package.json  pnpm-lock.yaml  pubspec.yaml  vite.config.js
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ip_msg/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/src/: app.dart
lib/src/localization/: app_en.arb
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/entity/: Cargo.toml  README.md
src-tauri/entity/src/: content_type.rs  ip_address.rs  lib.rs
src-tauri/entity/src/entities/: contact.rs  message.rs  mod.rs  prelude.rs
src-tauri/migration/: Cargo.toml  README.md
src-tauri/migration/src/: lib.rs  m20250213_104341_create_contacts_table.rs  m20250213_104356_create_messages_table.rs
src-tauri/migrations/: 20241010143446_init.sql
src-tauri/src/: backend_error.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  contacts.rs  messages.rs  mod.rs
src-tauri/src/commands/form_models/: contact_form.rs  message_form.rs  mod.rs
src-tauri/src/commands/models/: contact_form.rs  message_form.rs  mod.rs
src-tauri/src/db/: commands.rs  error.rs  local_db.rs  mod.rs
src-tauri/src/db/surfaces/: contacts_surface.rs  mod.rs
src-tauri/src/db/types/: ipv4.rs  mod.rs
src-tauri/src/models/: contact.rs
src-tauri/src/services/: mod.rs  service.rs  service_collection.rs
src-tauri/src/services/contacts/: add_contact_form.rs  contacts_service.rs  mod.rs
src-tauri/src/services/messaging/: event_payloads.rs  message.rs  message_error.rs  message_service.rs  mod.rs
src-tauri/src/services/messaging/net/: mod.rs  network_listener.rs  packet.rs
src-tauri/src/utils/: async_lazy_cell.rs  ip_address.rs  map_err_to_string.rs  mod.rs
src/lib/: AddContactPopup.svelte  Char.ts  Divider.svelte  Form.svelte  Header.svelte  IconButton.svelte  Input.svelte  Overlay.svelte  PopoutShelf.svelte  SelectableList.svelte  Selector.svelte  ToggleIconButton.svelte
src/lib/AddContact/: AddContactForm.svelte  ContactInput.svelte  ContactInputSubmitButton.svelte
src/lib/ContactPanel/: AddContactForm.svelte  AddNewContactButton.svelte  ContactElement.svelte  ContactElementLabel.svelte  ContactInput.svelte  ContactsPanel.svelte
src/lib/api/: contacts.ts  messages.ts
src/lib/api/models/: Contact.ts  Message.ts
src/lib/api/models/utils/: Deserializable.ts
src/lib/chat/: ChatBubble.svelte  ChatPrompt.svelte
src/lib/contacts/: AddContactPopup.svelte  ContactsList.svelte
src/lib/models/: Contact.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/add_contact/: +page.svelte
src/routes/chat/[slug]/: +layout.ts  +page.svelte  +page.ts
src/routes/contact/[slug]/: +page.ts
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
