[workspace]
members = [".", "entity", "migration"]

[workspace.package]
version = "0.2.0"
authors = ["Frederik P."]
edition = "2024"

[package]
name = "ip-msg"
description = "A Tauri App"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ip_msg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[workspace.dependencies]
entity = { path = "entity" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
] }
serde = { version = "1.0", features = ["derive"] }

[dependencies]
migration = { path = "migration" }
entity = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tauri = { version = "2.2", features = [] }
tauri-plugin-opener = "2.2"
dotenv_codegen = "0.15"
anyhow = "1.0"
log = "0.4"
thiserror = "2.0"
chrono = "0.4"
tauri-plugin-log = "2"
