[package]
name = "migration"
description = "SeaORM migrations for ip-msg"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true }   # Required for new-v4 method
entity = { workspace = true }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",          # `DATABASE_DRIVER` feature
  "with-uuid",
]
